--- a/RPG/Game.ini
+++ b/RPG/Game.ini
@@ -2,7 +2,7 @@
 RTP=RPGVXAce
 Library=System\RGSS301.dll
 Scripts=Data\Scripts.rvdata2
-Title=RPG
+Title=The Scythe Behind The Door
 Description=
 CreationDate=1669591702
-CloudDate=1674436737
+CloudDate=1674443026
